Add dataset subscriptions
